# todo-rest-api

./: .env  .travis.yml  Cargo.toml  docker-compose.yml
migrations/2020-08-11-134926_create_todos/: up.sql
src/: db.rs  main.rs  model.rs  schema.rs
